--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     //testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
     testImplementation 'junit:junit:4.12'
     //testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
+    //context.getSharedPreferences("user_prefs",Context.MODE_PRIVATE);
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
