--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    //testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
-    //testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
+
     testImplementation 'junit:junit:4.12'
-    //testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
-    //context.getSharedPreferences("user_prefs",Context.MODE_PRIVATE);
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
