--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:exifinterface:28.0.0'
     //compile 'com.master.android:glideimageview:1.0'
 }
